--- a/TargetVectorBallistics.uplugin
+++ b/TargetVectorBallistics.uplugin
@@ -1,31 +1,39 @@
 {
-	"FileVersion": 1,
+	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "1.0",
-	"FriendlyName": "Flora",
-	"Description": "A kit of fully functional, customizable and optimized foliage assets with compatible licenses gathered from the internet, prepared and standardized with Wind support for Unreal Engine 5.",
-	"Category": "Assets",
-	"CreatedBy": "Uriel Ballinas, Voidware Prohibited",
+	"FriendlyName": "TargetVectorBallistics",
+	"Description": "A GAS based, replicated, Projectile and Ballistics system aiming to be suitable for large open world games and simulations.",
+	"Category": "Ballistics",
+	"CreatedBy": "Uriel Ballinas, VOIDWARE Prohibited",
 	"CreatedByURL": "https://github.com/Voidware-Prohibited",
-	"DocsURL": "https://github.com/Voidware-Prohibited/Flora",
+	"DocsURL": "https://github.com/Voidware-Prohibited/TargetVectorBallistics",
 	"MarketplaceURL": "",
-	"SupportURL": "https://github.com/Voidware-Prohibited/Flora/discussions",
-	"EngineVersion": "5.5.0",
+	"SupportURL": "https://github.com/Voidware-Prohibited/TargetVectorBallistics/discussions",
 	"CanContainContent": true,
 	"IsBetaVersion": true,
 	"IsExperimentalVersion": false,
 	"Installed": false,
 	"Modules": [
 		{
-			"Name": "Flora",
+			"Name": "TargetVectorBallistics",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
 		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
+		},
+		{
 			"Name": "Metasound",
 			"Enabled": true
-		}
+		},
+		{
+			"Name": "Niagara",
+			"Enabled": true
+		},
+
 	]
 }
