--- a/Ricochet.uplugin
+++ b/Ricochet.uplugin
@@ -23,6 +23,10 @@
 	],
 	"Plugins": [
 		{
+			"Name": "GameplayTagsEditor",
+			"Enabled": true
+		},
+		{
 			"Name": "GameplayAbilities",
 			"Enabled": true
 		},
